# atsamd

boards/exen_mini/: Cargo.toml  Embed.toml  README.md  memory.x
boards/exen_mini/.cargo/: config
boards/exen_mini/examples/: blinky.rs  blinky_basic.rs  blinky_rtic.rs  clock.rs  i2c.rs  serial.rs  usb_echo.rs
boards/exen_mini/src/: lib.rs
