[package]
name = "exen_mini"
version = "0.1.0"
authors = ["Willy Jacobs<wn.jacobs@gmail.com>"]
description = "Board Support crate for the Nerdonic Exen Mini"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2.3"
nb = "0.1"

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.12"
default-features = false

[dev-dependencies]
panic-halt = "0.2"
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"
cortex-m-rtic = "0.5.1"
nom = { version = "5.1", default-features= false }
heapless = "0.5"
drogue-nom-utils = "0.1"

[dependencies.usb-device]
version = "0.2"
optional = true

[dependencies.usbd-serial]
version = "0.1"
optional = true

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []
usb = ["atsamd-hal/usb", "usb-device", "usbd-serial"]
